deploy/k8s/base/backend/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-intro-backend-worker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: self-intro-backend-worker
  ports:
    - name: http
      port: 8081
      targetPort: http
    - name: grpc
      port: 9090
      targetPort: grpc
